infra/staging/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: local.get-it.solutions
      http:
        paths:
          - path: /api/entity/?(.*)
            pathType: Prefix
            backend:
             service:
              name: entity-srv
              port:
                number: 3000
          - path: /api/action/?(.*)
            pathType: Prefix
            backend:
             service:
              name: action-srv
              port:
                number: 3000
          - path: /api/decision/?(.*)
            pathType: Prefix
            backend:
             service:
              name: decision-srv
              port:
                number: 3000
          - path: /api/party/?(.*)
            pathType: Prefix
            backend:
             service:
              name: party-srv
              port:
                number: 3000
    - host: www.get-it.solutions
      http:
        paths:
          - path: /api/entity/?(.*)
            pathType: Prefix
            backend:
             service:
              name: entity-srv
              port:
                number: 3000
          - path: /api/action/?(.*)
            pathType: Prefix
            backend:
             service:
              name: action-srv
              port:
                number: 3000
          - path: /api/decision/?(.*)
            pathType: Prefix
            backend:
             service:
              name: decision-srv
              port:
                number: 3000
          - path: /api/party/?(.*)
            pathType: Prefix
            backend:
             service:
              name: party-srv
              port:
                number: 3000
          - path: /api/shared/?(.*)
            pathType: Prefix
            backend:
             service:
              name: shared-srv
              port:
                number: 3000
    - host: make.get-it.solutions
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: get-it-made-srv
                port: 
                  number: 3000
